Changed to Java 17