@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.fuin</groupId>
         <artifactId>pom</artifactId>
-        <version>1.8.0-SNAPSHOT</version>
+        <version>1.9.0</version>
     </parent>
 
     <artifactId>objects4j</artifactId>
     <packaging>bundle</packaging>
-    <version>0.8.1-SNAPSHOT</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <description>A library with common Java types that are mostly immutable value objects.</description>
     <url>http://www.fuin.org/objects4j/</url>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.fuin</groupId>
             <artifactId>utils4j</artifactId>
-            <version>0.12.1-SNAPSHOT</version>
+            <version>0.13.0</version>
         </dependency>
 
 
@@ -100,7 +100,7 @@
         <dependency>
             <groupId>org.fuin</groupId>
             <artifactId>units4j</artifactId>
-            <version>0.11.0-SNAPSHOT</version>
+            <version>0.11.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -276,6 +276,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jdeps-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
